1998-09-21  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Update.

	* glclock.h (class glclock): Add members: describe, struct
	menu_listener, menu_quit, menu_factory, about.

	* glclock.cc (menu_activate): New function.
	(describe): New function.
	(~glclock): Destroy the member menu factory.
	(glclock): Create and initialize a menu factory.
	(handle_button_event): Handle button-3 for pop-up menu.
	(menu_quit): New function.

1998-08-19  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* module.cc (draw_clock) [LOGO128]: Add experimental texture code.
	(init) [LOGO]: Likewise.

	* module.h (class module): Add member rot.
	* module.cc (rot): Removed.
	(init): Initialize this->rot.
	(draw_clock): Set the modelview matrix.
	(rotate): Do not reset the modelview matrix.

	* module.cc (draw_clock): Use flat shading while drawing a dial.
	(draw_clock) [0]: (Use local viewer while drawing hands.)

1998-08-10  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (INCLUDES): Define SESSION.

	* main.cc [SESSION] (argc_save): New variable.
	[SESSION] (argv_save): New variable.
	[SESSION] (set_command): New function.
	(main) [SESSION]: Save the original arguments.
	(main) [SESSION]: Connect after-realize to set_command.

1998-07-31  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* rglclock.1: Update .TH.

	* Makefile.am (man_MANS): Add rglclock.1.
	(EXTRA_DIST): Add ${man_MANS}.

	* rglclock.1: New file.

1998-07-27  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc (clean): #ifdef out unref'ing toplevel.

	* module.cc (HAND_ADC): New const.
	(HAND_SC): New const.
	(HAND_SR): New const.
	(draw_clock): Use them.

1998-07-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc (glclock): Add an exception handler.

1998-07-19  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Updated.

1998-07-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc: Move toplevel out of main.
	(main): Remove local toplevel.
